# delete-binaries-deleted

./: .env.example  .gitignore  .pyproject.toml.backup  README.md  pyproject.toml
src/delete_binaries_deleted/: __init__.py  cli.py  database.py  database_fallback.py  main.py
tests/: __init__.py  test_database.py
